tests/fixtures/invalid/hex_str.py
# Cannot call hex() with Str
x = hex("hello")
